<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".TeacherAttendanceActivity">
	<TextView
		android:id="@+id/textView"
		android:layout_marginLeft="20dp"
		android:layout_marginRight="20dp"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="100dp"
		android:textSize="20sp"
		android:textAlignment="center"
		android:text="@string/use_the_button_below_to_toggle_attendance_recording"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<Button
		android:id="@+id/attendanceButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="100dp"
		android:text="@string/start_attendance"
		android:onClick="register_attendance"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView" />

	<TextView
		android:id="@+id/attendanceStatusView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="0dp"
		android:text="@string/attendance_is_disabled"
		android:textColor="#ff0000"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/attendanceButton" />
</androidx.constraintlayout.widget.ConstraintLayout>