<?xml version="1.0" encoding="utf-8"?>
<!--
DISCLAIMER: Any Part or segment of the comments presented as documentation cannot be modified or removed without the proper permission from the current author. If any of the documentation in the public domain is found without proper credits and permission of the author, it will be dealt as plagiarism of the original code. However, part of the codes can be customized and used as per needs without any permission for personal use.

Author: Shashank Kotyan
Contact details: shashank15100@iiitnr.edu.in; shashankkotyan@gmail.com
Developed for: Affective Computing Team, IIT-Guwahati for development of vedinkakSa, a sensitive classroom application.

-->
<!-- Constraint Layout as Base Layout -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:focusableInTouchMode="true"
    android:clickable="true"
    android:focusable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="iitg.vedinkaksa.AnswerGive">
    <!-- Linear Layout holding all children -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:orientation="vertical"
        android:padding="10dp"
        tools:ignore="MissingConstraints">
        <!-- Linear Layout for holding question id and question -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_id" />

            <TextView
                android:id="@+id/questionid2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <!-- Linear Layout for predefined text for question id and question -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question" />

            <TextView
                android:id="@+id/questionV2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <!-- Linear Layout for answers -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="0dp"
            tools:ignore="MissingConstraints">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_by_teacher" />
                <EditText
                    android:id="@+id/answerV2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/submitanswer"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center_vertical|center_horizontal|center"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/give"
                    android:drawablePadding="5dp"
                    android:text="@string/give_answer"
                    android:textAlignment="textStart"
                    tools:ignore="RtlCompat" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
