<?xml version="1.0" encoding="utf-8"?>
<!--
DISCLAIMER: Any Part or segment of the comments presented as documentation cannot be modified or removed without the proper permission from the current author. If any of the documentation in the public domain is found without proper credits and permission of the author, it will be dealt as plagiarism of the original code. However, part of the codes can be customized and used as per needs without any permission for personal use.

Author: Bishwaroop Bhattacharjee, Abhishek Kumar, Siddhi Joshi

-->
<!-- Constraint Layout as Base Layout -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:focusableInTouchMode="true"
    android:clickable="true"
    android:focusable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="iitg.vedinkaksa.unused.StudentClassroom">
    <!-- Linear Layout holding all children-->


        android:id="@+id/connect"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="15"
        tools:ignore="MissingConstraints">
        <!-- Webview holding slide -->
    <WebView
        android:id="@+id/webview"
        android:layout_width="match_parent"
        android:layout_height="302dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_weight="5"
        android:background="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="186dp"
        tools:ignore="MissingConstraints"></WebView>
        <!-- Linear Layout holding options for notes -->

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:ignore="MissingConstraints" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/save"
        android:onClick="savenote"
        android:text="@string/save_notes"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="33dp"
        tools:ignore="MissingConstraints" />
            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:ignore="MissingConstraints" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/take"
        android:onClick="takenote"
        android:text="@string/take_notes"
        tools:layout_editor_absoluteX="220dp"
        tools:layout_editor_absoluteY="33dp"
        tools:ignore="MissingConstraints" />

        <!-- Linear Layout holding options queries -->

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:orientation="horizontal">

    <EditText
        android:id="@+id/query"
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:hint="@string/ask_queries_here"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="112dp"
        tools:ignore="MissingConstraints" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:ignore="MissingConstraints" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:drawableTop="@drawable/question"
        android:onClick="ask"
        android:text="@string/ask"
        tools:layout_editor_absoluteX="295dp"
        tools:layout_editor_absoluteY="112dp"
        tools:ignore="MissingConstraints" />




</androidx.constraintlayout.widget.ConstraintLayout>
